Finish adding social links to footer, fix a carousel bug caused by css namespacing.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9948,9 +9948,8 @@ h3 {
   background-color: #ffffe9;
   max-width: none;
   width: 100vw;
-  /* Slider */
 }
-.home-container * + * {
+.home-container row > * + * {
   margin-top: 1.5em;
 }
 .home-container .latest-release h2 {
@@ -9963,6 +9962,7 @@ h3 {
   background-size: contain;
   width: 100%;
   height: 50px;
+  margin-bottom: 1.5em;
 }
 .home-container h1, .home-container h2, .home-container h3 {
   font-family: "Black Ops One", cursive;
@@ -9983,100 +9983,22 @@ h3 {
 }
 .home-container footer .social-media {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
 }
 .home-container footer .social-media .social-icon {
-  display: inline-flex;
   align-items: center;
+  display: inline-flex;
   justify-content: center;
   margin-top: 0;
-  flex: 0 0 33%;
 }
 .home-container footer .social-media .social-icon img {
-  height: 50px;
   -o-object-fit: contain;
      object-fit: contain;
   width: 50px;
 }
-.home-container .slick-slider {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent;
-}
-.home-container .slick-list {
-  position: relative;
-  overflow: hidden;
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.home-container .slick-list:focus {
-  outline: none;
-}
-.home-container .slick-list.dragging {
-  cursor: pointer;
-  cursor: hand;
-}
-.home-container .slick-slider .slick-track,
-.home-container .slick-slider .slick-list {
-  transform: translate3d(0, 0, 0);
-}
-.home-container .slick-track {
-  position: relative;
-  left: 0;
-  top: 0;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.home-container .slick-track:before, .home-container .slick-track:after {
-  content: "";
-  display: table;
-}
-.home-container .slick-track:after {
-  clear: both;
-}
-.slick-loading .home-container .slick-track {
-  visibility: hidden;
-}
-.home-container .slick-slide {
-  float: left;
-  height: 100%;
-  min-height: 1px;
-  display: none;
-}
-[dir=rtl] .home-container .slick-slide {
-  float: right;
-}
-.home-container .slick-slide img {
-  display: block;
-}
-.home-container .slick-slide.slick-loading img {
-  display: none;
-}
-.home-container .slick-slide.dragging img {
-  pointer-events: none;
-}
-.slick-initialized .home-container .slick-slide {
-  display: block;
-}
-.slick-loading .home-container .slick-slide {
-  visibility: hidden;
-}
-.slick-vertical .home-container .slick-slide {
-  display: block;
-  height: auto;
-  border: 1px solid transparent;
-}
-.home-container .slick-arrow.slick-hidden {
-  display: none;
+.home-container footer .social-media .social-icon.circle img {
+  width: 38px;
 }
 .home-container .show-list {
   position: relative;
@@ -10565,6 +10487,93 @@ label[for=print_only] {
 }
 .qs-datepicker .qs-event.qs-disabled:after, .qs-datepicker .qs-event.qs-empty:after {
   background: #cce4ff;
+}
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+[dir=rtl] .slick-slide {
+  float: right;
+}
+.slick-slide img {
+  display: block;
+}
+.slick-slide.slick-loading img {
+  display: none;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
 }
 
 main.container-fluid, main.container-sm, main.container-md, main.container-lg, main.container-xl {
